# spot4aws

./: .gitignore  README.md  build.sh  build_local.sh  build_robot.sh  build_simulation.sh  launch_fleet_single.json  launch_fleet_two_robots.json  launch_single.json  launch_two_robots.json  run.sh  run_test1.sh  run_test_drive_aa.sh  run_test_localization_ab.sh  run_test_localization_kidnapped.sh  run_test_navigation.sh  run_test_navigation_ab.sh  run_test_rotation.sh  run_test_standstill.sh  run_test_straight_line.sh  setup.sh
robot_ws/: .rosinstall  install_additional_deps.sh
robot_ws/src/rs_robot_tests/: CMakeLists.txt  package.xml
robot_ws/src/rs_robot_tests/launch/: coverage_effectiveness.launch  goal_tolerance_test.launch  localization_world_changes_test.launch  rotation_test.launch  standstill_drive_a_to_a_test.launch  standstill_test.launch
setup/: aws_test_setup.bash  ros_setup.bash
setup/fleetLauncherApp/: base_template.yml
setup/testLauncherApp/: app.py  base_template.yml  event.json  goal_tolerance_test.json  localization_world_changes.json  navigation_ab_test.json  navigation_test.json  obstacle_avoidance_test.json  rotation.json  standstill.json  (+2 more)
simulation_ws/: .rosinstall  install_additional_deps.sh
test_launch_json/: coverage_effectiveness_test.json  coverage_test.json  goal_tolerance_test.json  localization_kidnapped_robot.json  localization_world_changes.json  navigation_ab_test.json  navigation_test.json  obstacle_avoidance_test.json  rotation.json  standstill.json  standstill_drive_a_to_a_test.json  straight_line_test.json
(+35 files in other folders)
