<?xml version="1.0"?>
<package format="2">
  <name>rs_robot_tests</name>
  <version>0.0.1</version>
  <description>Launch files for running tests</description>
  <license>BSD</license>
  <author email="robotics@softserveinc.com">Softserve Robotics Team</author>
  <maintainer email="robotics@softserveinc.com">Softserve Robotics Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mp_slippage_and_motor_saturation_tests</depend>
  <depend>mp_behaviour_tests</depend>
  <depend>mp_planning_tests</depend>
  <depend>softserve_simulation_common</depend>

</package>